kuber/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: andersen
  labels: 
    app: andersen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: andersen
  template:
    metadata:
      labels:
        app: andersen
    spec:
      containers:
      - name: private
        image: idocdevops/webrtc:v0.1.1
        ports:
        - name: andersen-port
          containerPort: 80
      imagePullSecrets:
      - name: dockerhub
