kuber/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: andersen
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-north-1:339712878042:certificate/0200005f-1794-4cfa-a3da-ce65c48fb4c2
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: andersen-port
    - name: http
      protocol: TCP
      port: 80
      targetPort: andersen-port
  selector:
    app: andersen
  type: LoadBalancer
