kuber/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: andersen
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: andersen-port
    - name: http
      protocol: TCP
      port: 80
      targetPort: andersen-port
  selector:
    app: andersen
  type: LoadBalancer
